<resources>
    <string name="app_name">Einsteiny</string>
    <string name="text_profile">Profile</string>
    <string name="text_your_classes">Your Courses</string>
    <string name="text_explore">Explore</string>
    <string name="text_favourites">Saved</string>

    <!-- Please put your application's app ID and keys here -->
    <string name="parse_app_id">einsteiny-client</string>
    <string name="parse_client_key">P8GP7VqmmLJrj7G90Gd149baRZsBo67Q</string>
    <string name="facebook_app_id">315361398883382</string>

    <string name="profile_logo_content_description">Logo</string>
    <string name="profile_title_logged_in">You are logged in as</string>
    <string name="profile_logout_button_label">Log out</string>
    <string name="profile_title_logged_out">You must be logged in to view your profile</string>
    <string name="login_button_label">LET\'S START</string>
    <string name="settings_title">Settings</string>
    <string name="reminder_days">Reminder Days</string>
    <string name="show_days">Tap to see current notification days</string>
    <string name="reminder_days_title">Reminder Days</string>
    <string name="wifi_downloads_title">WiFi Downloads</string>
    <string name="wifi_summary">Save your data</string>
    <string name="push_summary">Check for once-a-day reminders</string>
    <string name="push_title">Push Notifications</string>
    <string name="time_title">Time</string>
    <string-array name="days">
        <item>M</item>
        <item>Tu</item>
        <item>W</item>
        <item>Th</item>
        <item>F</item>
        <item>Sa</item>
        <item>Su</item>
    </string-array>

    <string name="subscribe">Subscribe</string>
    <string name="unsubscribe">Unsubscribe</string>

    <string name="gcm_sender_id">id:195129503955</string>
    <string name="connected_with_facebook_true">connected</string>
    <string name="connected_with_facebook_label">Link Facebook Account</string>
    <string name="facebook_login_label">Continue with Facebook</string>
    <string name="connect_with_facebook">Log in with Facebook to connect</string>
    <string name="course_breakdown">Areas of Study </string>

    <plurals name="days">
        <item quantity="one">1 Day </item>
        <item quantity="other">%d  Days</item>
    </plurals>

    <!--<plurals name="courses">-->
    <!--<item quantity="one">Course </item>-->
    <!--<item quantity="other">Courses</item>-->
    <!--</plurals>-->
</resources>
